@@ -14,8 +14,3 @@ override_dh_install:
 
 override_dh_installchangelogs:
 	dh_installchangelogs remmina/ChangeLog
-
-override_dh_makeshlibs:
-	for plugin in rdp vnc xdmcp nx telepathy; do \
-		dh_makeshlibs -premmina-plugin-$$plugin -Xremmina-plugin-$$plugin.so; \
-	done
