@@ -15,6 +15,7 @@ remmina (1.0.0-5) UNRELEASED; urgency=low
     - hardening-check discovers unprotected functions only.
   * debian/rules:
     - Install upstream changelog.
+    - Overriding dh_makeshlibs is no longer required.
 
   [ Jonathan McCrohan ]
   * debian/watch:
